<resources>
    <string name="app_name">ChatApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_sign_in_button">Sign In</string>
    <string name="text_sign_up_button">Sign Up</string>
    <string name="text_view_register">Register</string>
    <string name="text_view_go_to_profile">Pick a profile picture (Optional)</string>
    <string name="hint_username">Username</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_button_text">Send</string>
    <string name="sign_out_button_text">Sign out</string>
</resources>